test_build_failure.txt
[1/6] Building CXX object CMakeFiles/mcp.dir/src/session/session.cpp.o
FAILED: CMakeFiles/mcp.dir/src/session/session.cpp.o 
/sbin/c++ -DMCP_USE_LIBCURL -I/home/c/dev/Neumann_Cyber/mcp-cpp/include -I/home/c/dev/Neumann_Cyber/mcp-cpp/build/_deps/json-src/include -I/home/c/dev/Neumann_Cyber/mcp-cpp/build/_deps/json_schema-src/src -g -std=c++17 -MD -MT CMakeFiles/mcp.dir/src/session/session.cpp.o -MF CMakeFiles/mcp.dir/src/session/session.cpp.o.d -o CMakeFiles/mcp.dir/src/session/session.cpp.o -c /home/c/dev/Neumann_Cyber/mcp-cpp/src/session/session.cpp
/home/c/dev/Neumann_Cyber/mcp-cpp/src/session/session.cpp: In lambda function:
/home/c/dev/Neumann_Cyber/mcp-cpp/src/session/session.cpp:321:25: error: ‘sleep_for’ is not a member of ‘std::this_thread’
  321 |       std::this_thread::sleep_for(std::chrono::milliseconds(100));
      |                         ^~~~~~~~~
[2/6] Building CXX object tests/CMakeFiles/mcp_tests.dir/unit/transport_tests.cpp.o
FAILED: tests/CMakeFiles/mcp_tests.dir/unit/transport_tests.cpp.o 
/sbin/c++  -I/home/c/dev/Neumann_Cyber/mcp-cpp/include -I/home/c/dev/Neumann_Cyber/mcp-cpp/build/_deps/json-src/include -I/home/c/dev/Neumann_Cyber/mcp-cpp/build/_deps/json_schema-src/src -isystem /home/c/dev/Neumann_Cyber/mcp-cpp/build/_deps/googletest-src/googletest/include -isystem /home/c/dev/Neumann_Cyber/mcp-cpp/build/_deps/googletest-src/googletest -isystem /home/c/dev/Neumann_Cyber/mcp-cpp/build/_deps/googletest-src/googlemock/include -isystem /home/c/dev/Neumann_Cyber/mcp-cpp/build/_deps/googletest-src/googlemock -g -std=c++17 -MD -MT tests/CMakeFiles/mcp_tests.dir/unit/transport_tests.cpp.o -MF tests/CMakeFiles/mcp_tests.dir/unit/transport_tests.cpp.o.d -o tests/CMakeFiles/mcp_tests.dir/unit/transport_tests.cpp.o -c /home/c/dev/Neumann_Cyber/mcp-cpp/tests/unit/transport_tests.cpp
/home/c/dev/Neumann_Cyber/mcp-cpp/tests/unit/transport_tests.cpp:199:45: error: ‘CURLcode (* curl_easy_perform)(CURL*)’ redeclared as different kind of entity
  199 |   extern CURLcode (*curl_easy_perform)(CURL*);
      |                                             ^
/home/c/dev/Neumann_Cyber/mcp-cpp/tests/unit/transport_tests.cpp:47:12: note: previous declaration ‘CURLcode curl_easy_perform(CURL*)’
   47 |   CURLcode curl_easy_perform(CURL* handle) {
      |            ^~~~~~~~~~~~~~~~~
/home/c/dev/Neumann_Cyber/mcp-cpp/tests/unit/transport_tests.cpp:223:45: error: ‘CURLcode (* curl_easy_perform)(CURL*)’ redeclared as different kind of entity
  223 |   extern CURLcode (*curl_easy_perform)(CURL*);
      |                                             ^
/home/c/dev/Neumann_Cyber/mcp-cpp/tests/unit/transport_tests.cpp:47:12: note: previous declaration ‘CURLcode curl_easy_perform(CURL*)’
   47 |   CURLcode curl_easy_perform(CURL* handle) {
      |            ^~~~~~~~~~~~~~~~~
/home/c/dev/Neumann_Cyber/mcp-cpp/tests/unit/transport_tests.cpp: In member function ‘virtual void HttpSseTransportTest_ConnectionFailure_Test::TestBody()’:
/home/c/dev/Neumann_Cyber/mcp-cpp/tests/unit/transport_tests.cpp:269:3: error: ‘error_callback_’ was not declared in this scope
  269 |   error_callback_(ec);
      |   ^~~~~~~~~~~~~~~
/home/c/dev/Neumann_Cyber/mcp-cpp/tests/unit/transport_tests.cpp: At global scope:
/home/c/dev/Neumann_Cyber/mcp-cpp/tests/unit/transport_tests.cpp:333:45: error: ‘CURLcode (* curl_easy_perform)(CURL*)’ redeclared as different kind of entity
  333 |   extern CURLcode (*curl_easy_perform)(CURL*);
      |                                             ^
/home/c/dev/Neumann_Cyber/mcp-cpp/tests/unit/transport_tests.cpp:47:12: note: previous declaration ‘CURLcode curl_easy_perform(CURL*)’
   47 |   CURLcode curl_easy_perform(CURL* handle) {
      |            ^~~~~~~~~~~~~~~~~
/home/c/dev/Neumann_Cyber/mcp-cpp/tests/unit/transport_tests.cpp: In member function ‘virtual void HttpSseTransportTest_ReconnectionLogic_Test::TestBody()’:
/home/c/dev/Neumann_Cyber/mcp-cpp/tests/unit/transport_tests.cpp:400:3: error: ‘error_callback_’ was not declared in this scope
  400 |   error_callback_(ec);
      |   ^~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
